<resources>
    <string name="app_name">NFC Smart Card</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="welcome_user_text">Welcome User</string>
    <string name="provide_details_text">Please provide following details</string>
    <string name="username_label">Username</string>
    <!--    <string name="username_example">\'example_username\'</string>-->
    <string name="email_label">Email</string>
    <string name="email_example">\'example@gmail.com\'</string>
    <string name="country_code_label">+91</string>
    <string name="contact_label">Contact</string>
    <string name="contact_example">\'0123456789\'</string>
    <string name="password_label">Password</string>
    <string name="password_example">********</string>

    <string name="signin_label">Sign In</string>
    <string name="signin_using_email_text">Sign in using <font color="#43abfd">Email</font></string>
    <string name="signin_using_contact_text">Sign in using <font color="#43abfd">Contact</font></string>


    <string name="welcome_text">Welcome</string>
    <string name="route_category_text">Route Category:</string>
    <string name="bus_number_text">Bus Number:</string>
    <string name="scan_cards_text">Scan Cards</string>
    <string name="logout_text">Log out</string>

    <string name="logout_dialog_text">Confirm Logout?</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">no</string>
    <string name="try_again_text">Try Again</string>
    <string name="loading_text">Loading...</string>
    <string name="fetching_details_text">Fetching Details</string>
    <string name="cancel_text"><font color="#43abfd">Cancel</font></string>

    <string name="tap_card_text">Tap the card to read</string>
    <string name="scan_result_text">Scan Result</string>

    <string name="scan_result_subscribed_text"><font color="#24d190">Verified</font></string>
    <string name="scan_result_other_bus_text"><font color="#f5b326">Other Route</font></string>
    <string name="scan_result_not_subscribed_text"><font color="#d93a45">Not Subscribed</font></string>


</resources>