<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LoginFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_user_text"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_marginTop="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/provide_details_text"
            android:textSize="16sp"/>





        <androidx.appcompat.widget.LinearLayoutCompat
            android:visibility="gone"
            android:id="@+id/layoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_label"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginTop="32dp"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_example"
                android:inputType="textEmailAddress"
                android:background="@drawable/bg_light_grey_rounded"
                android:importantForAutofill="no"
                android:paddingVertical="8dp"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layoutContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_label"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginTop="32dp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country_code_label"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:background="@drawable/bg_country_code"
                    android:layout_marginTop="8dp"
                    android:paddingVertical="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="12dp"/>

                <EditText
                    android:id="@+id/etContact"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact_example"
                    android:inputType="number"
                    android:layout_weight="4"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/bg_light_grey_rounded"
                    android:importantForAutofill="no"
                    android:paddingVertical="8dp"
                    android:paddingHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>



        </androidx.appcompat.widget.LinearLayoutCompat>







        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_label"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="24dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_example"
            android:background="@drawable/bg_light_grey_rounded"
            android:importantForAutofill="no"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"/>


        <ProgressBar
            android:visibility="invisible"
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:indeterminateTint="@color/black"/>

        <TextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center_horizontal"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_label"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/primary"
            android:textSize="16sp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            app:cornerRadius="5dp"/>

        <TextView
            android:id="@+id/tvSignInUsingEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_using_email_text"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/tvSignInUsingContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_using_contact_text"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>